# update-nix-fetchgit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  hnix-fix-qq.patch  hnix-generic1-nkeyname.patch  hnix-lexeme-sourcepos.patch  hnix.patch  nixpkgs.nix  package.yaml  readme.md  release.nix  shell.nix  update-nix-fetchgit.cabal
.github/: pull_request_template.md
.github/workflows/: bump-command.yml  ci.yml  release.yml  tag-release.yml
app/: Main.hs
src/Nix/: Comments.hs  Match.hs
src/Nix/Match/: Typed.hs
src/Update/: Span.hs
src/Update/Nix/: FetchGit.hs  Match.hs  Unify.hs  Unify2.hs  Updater.hs
src/Update/Nix/FetchGit/: Prefetch.hs  Types.hs  Utils.hs  Warning.hs
tests/: .gitignore  Samples.hs  fakeRepo.sh  parse.in.nix  test.sh  test_builtins_fetchgit.expected.nix  test_builtins_fetchgit.in.nix  test_builtins_fetchgit_update_ignores_sha256.expected.nix  test_builtins_fetchgit_update_ignores_sha256.in.nix  test_builtins_fetchtarball.expected.nix  test_builtins_fetchtarball.in.nix  test_builtins_fetchtarball_github.in.nix  test_dotgit.expected.nix  test_dotgit.in.nix  test_github_submodules.expected.nix  test_github_submodules.in.nix  test_max_version.expected.nix  test_max_version.in.nix  test_rec_sets.expected.nix  test_rec_sets.in.nix  test_scoped.expected.nix  test_scoped.in.nix  test_simple_update.expected.nix  test_simple_update.in.nix  test_updates_with_other_errors.expected.nix  test_updates_with_other_errors.in.nix  test_version_update.expected.nix  test_version_update.in.nix
tests/networked/: test_builtins_fetchtarball_github.out.nix  test_hackage_direct.expected.nix  test_hackage_direct.in.nix  test_latest_tag.expected.nix  test_latest_tag.in.nix  test_readme_examples.in.nix  test_readme_examples.out.nix
