name:                update-nix-fetchgit
version:             0.1.0.0
synopsis:            A program to update fetchgit values in Nix expressions
description:         Please see README.md
homepage:            https://github.com/expipiplus1/update-nix-fetchgit#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          haskell@monoid.al
copyright:           2015 Joe Hermaszewski
category:            Nix
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable update-nix-fetchgit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , update-nix-fetchgit
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , update-nix-fetchgit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/update-nix-fetchgit
