name:                update-nix-fetchgit
version:             0.1.0.0
synopsis:            A program to update fetchgit values in Nix expressions
description:         Please see README.md
homepage:            https://github.com/expipiplus1/update-nix-fetchgit#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          haskell@monoid.al
copyright:           2015 Joe Hermaszewski
category:            Nix
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Update.Nix.FetchGit
                     , Update.Span
                     , Update.Nix.FetchGit.Prefetch
                     , Update.Nix.FetchGit.Warning
                     , Update.Nix.FetchGit.Utils
  other-modules:       Update.Nix.FetchGit.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9 && < 0.12
                     , ansi-wl-pprint >= 0.6 && < 0.7
                     , async >= 2.1 && < 2.2
                     , bytestring >= 0.10 && < 0.11
                     , data-fix >= 0.0 && < 0.1
                     , hnix >= 0.3.2 && < 0.4
                     , process >= 1.2 && < 1.5
                     , text >= 1.2 && < 1.3
                     , time >= 1.5 && < 1.7
                     , transformers >= 0.4 && < 0.6
                     , trifecta >= 1.6 && < 1.7
                     , uniplate >= 1.6 && < 1.7
                     , utf8-string >= 1.0 && < 1.1
                     , errors >= 2.1 && < 2.2
  default-language:    Haskell2010
  ghc-options: -Wall

executable update-nix-fetchgit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text >= 1.2 && < 1.3
                     , update-nix-fetchgit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/update-nix-fetchgit
