name:                update-nix-fetchgit
version:             0.1.2.0
synopsis:            A program to update fetchgit values in Nix expressions
description:         This command-line utility is meant to be used by people maintaining Nix expressions that fetch files from Git repositories.
                     It automates the process of keeping such expressions up-to-date with the latest upstream sources.
homepage:            https://github.com/expipiplus1/update-nix-fetchgit#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          haskell@monoid.al
copyright:           2015 Joe Hermaszewski
category:            Nix
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Update.Nix.FetchGit
                     , Update.Span
                     , Update.Nix.FetchGit.Prefetch
                     , Update.Nix.FetchGit.Warning
                     , Update.Nix.FetchGit.Utils
  other-modules:       Update.Nix.FetchGit.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9
                     , async >= 2.1
                     , bytestring >= 0.10
                     , errors >= 2.1
                     , hnix >= 0.8
                     , prettyprinter
                     , process >= 1.2
                     , text >= 1.2
                     , time >= 1.5
                     , transformers >= 0.4
                     , uniplate >= 1.6
                     , utf8-string >= 1.0
  default-language:    Haskell2010
  ghc-options: -Wall

executable update-nix-fetchgit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text >= 1.2
                     , update-nix-fetchgit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/update-nix-fetchgit
